# Raylacer

./: CMakeLists.txt  README.md
Demo/: main.cpp
Raylacer/Core/: Color.cpp  Color.h  Light.cpp  Light.h  Material.cpp  Material.h  Pixel.cpp  Pixel.h  Ray.cpp  Ray.h  Screen.cpp  Screen.h  Vector.cpp  Vector.h
Raylacer/Export/: Export.cpp  Export.h
Raylacer/Shapes/: Sphere.cpp  Sphere.h
